# index-media-server

./: .gitignore  README.md  package-lock.json  package.json  schema.sql  tailwind.localweb.config.js  tailwind.web.config.js
docs/: video_scanning.md
localweb/: index.html  unauthorized.html
localweb/scripts/: constants.js  main.js
localweb/scripts/clients/: Backend.js
localweb/scripts/components/: AddLocalIndexComponent.js  UpdateLocalIndexComponent.js
localweb/scripts/controllers/: PageController.js
localweb/scripts/models/: Config.js  Indexes.js  Profiles.js
localweb/scripts/pages/: HomePage.js  InitialPage.js  ManageIndexesPage.js  ManageProfilesPage.js  Page.js  SetupPage.js  (+1 more)
localweb/styles/: main.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  config.rs  constants.rs  lib.rs  main.rs  scanning.rs  scanning_process.rs
src-tauri/src/api/: config.rs  folders.rs  handlers.rs  http.rs  https.rs  indexes.rs  mod.rs  profiles.rs  responses.rs  router.rs  state.rs
src-tauri/src/api/controllers/: api.rs  auth.rs  icon.rs  mod.rs  static.rs  static_files.rs
src-tauri/src/db/: mod.rs  models.rs  pool.rs
src-tauri/src/db/repos/: indexes_repo.rs  mod.rs  profiles_repo.rs  tokens_repo.rs  video_repo.rs
src-tauri/src/models/: config.rs
src-tauri/src/scanning/: mod.rs  temp_files.rs  video_scanning.rs
src-tauri/src/utils/: classifier.rs  hash.rs  image.rs  mod.rs  network.rs  token.rs  video_classifier.rs
web/: index.html
web/scripts/: main.js
web/styles/: main.css
(+3 files in other folders)
